Fix intro warning modal copy and button spacing (#41082)
* Fix intro warning modal copy and button spacing

* Add changelog

--- a/plugins/woocommerce-admin/client/customize-store/intro/intro.scss
+++ b/plugins/woocommerce-admin/client/customize-store/intro/intro.scss
@@ -277,7 +277,7 @@
 	}
 	.woocommerce-customize-store__design-change-warning-modal-footer {
 		display: flex;
-		gap: 15px;
+		gap: 12px;
 		justify-content: flex-end;
 	}
 }
